Mobile styles fix for finish page and don't add EMQs on mobile.

--- a/src/styles.css
+++ b/src/styles.css
@@ -233,13 +233,6 @@ div.loading {
   z-index: 40;
 }
 
-.full-modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-}
 
 .modal.hidden {
   display: none;
